--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@react-three/drei": "^9.117.3",
+    "@react-three/drei": "^9.119.0",
     "@react-three/fiber": "^8.17.10",
     "@tanstack/react-query": "^5.56.2",
     "@types/three": "^0.170.0",
@@ -47,7 +47,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.3.0",
+    "embla-carousel-react": "^8.5.1",
+    "firebase": "^11.0.2",
     "framer-motion": "^11.12.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.451.0",
