--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-three/drei": "^9.119.0",
     "@react-three/fiber": "^8.17.10",
+    "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.56.2",
     "@types/three": "^0.170.0",
     "class-variance-authority": "^0.7.0",
